# CS614-Group-Project

./: .env.example  .gitignore  README.md  SCIFACT_MIGRATION.md  presentation_content.md  pyproject.toml
Docs/: AGENT_PAIR_GUIDE.md  EVAL_GUIDE.md  Health_Claims_FactChecker_Proposal_v4.md  Health_Claims_FactChecker_Proposal_v5.md  INPUT_DATA_GUIDE.md  POC_BUILD_GUIDE.md  RAG_PAIR_GUIDE.md
app/: streamlit_app.py
data/: corpus.json  e9b_test_claims.json  out_of_corpus_claims.json  test_claims.json
data/archive/: corpus_v1.json  corpus_v2.json  test_claims_v2.json
notebooks/: 00_data_exploration.ipynb  01_chunking_strategies.ipynb  02_retrieval_methods.ipynb  03_agent_architectures.ipynb  04_experiment_matrix.ipynb  05_evaluation_metrics.ipynb  e9c_analysis.ipynb  experiment_analysis.ipynb  poc_comparison.ipynb
results/: comparison.json  evaluation.json  p1_results.json
results/experiments/: E1.json  E11.json  E13.json  E13_v2.json  E13_v3.json  E14.json  E2.json  E3.json  E4.json  E4b.json  E5.json  E6.json  E7.json  E8.json  E9c.json  E9d.json
scripts/: build_scifact_dataset.py  fetch_corpus.py  reindex_corpus.py
scripts/archive/: fetch_corpus.py
src/: compare.py  experiment_runner.py  experiment_runner_anh.py  experiment_runner_original.py  experiment_runner_yunsi.py
src/chunking/: __init__.py  fixed.py  recursive.py  section_aware.py  semantic.py
src/evaluation/: grounding_rate.py  llm_judge.py  metrics.py  pairwise.py  run_eval.py
src/pipelines/: configurable.py
src/retrieval/: claim_decomposer.py  evidence_ranker.py  hybrid.py  naive.py  (+4 more)
(+42 files in other folders)
