[project]
name = "health-claims-factchecker"
version = "0.1.0"
description = "Comparing RAG and Agent Architectures for Health Claim Verification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Vector store
    "chromadb>=0.4.0",
    # Embeddings & LLM clients
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    # Agent frameworks
    "strands-agents[bedrock]>=0.1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    # Data & utilities
    "biopython>=1.80",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Demo
    "streamlit>=1.30.0",
    # Analysis & notebooks
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "datasets<=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
